--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
         <title>Sejalec</title>
+
+        <link rel="stylesheet" type="text/css" href="./style.css">
+
+        <script type="module" src="app.js"></script>
     </head>
+    <body>
+        <div id="canvas-container">
+            <canvas width="800" height="600">
+                Your browser does not support HTML5
+            </canvas>
+        </div>
+    </body>
 </html>
-<body>
-    Hello world
-</body>
         
