--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
 
         <link rel="stylesheet" type="text/css" href="./style.css">
 
+        <script type="text/javascript" src="./lib/gl-matrix-min.js"></script>
+        <script type="text/javascript" src="./lib/dat.gui.min.js"></script>
         <script type="module" src="app.js"></script>
     </head>
     <body>
-        <div id="canvas-container">
-            <canvas width="800" height="600">
+        <div class="overlay">
+
+        </div>
+        <div class="fullscreen">
+            <canvas>
                 Your browser does not support HTML5
             </canvas>
         </div>
