--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     </head>
     <body>
         <div class="overlay">
-
+            <div>
+                <b>Water :</b>
+                <progress class="water" value="3" max="10"></progress>
+            </div>
+            <div>
+                <b>Nature:</b>
+                <progress class="flowers" value="10" max="100"></progress>
+            </div>
         </div>
         <div class="fullscreen">
             <canvas>
