--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="overlay">
             <div>
                 <b>Water :</b>
-                <progress class="water" value="3" max="10"></progress>
+                <progress id="water" value="3" max="10"></progress>
             </div>
             <div>
                 <b>Nature:</b>
-                <progress class="flowers" value="10" max="100"></progress>
+                <progress id="flowers" value="10" max="100"></progress>
             </div>
         </div>
         <div class="fullscreen">
