--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     </head>
     <body>
         <div class="overlay">
-            <div>
-                <b>Water :</b>
-                <progress id="water" value="3" max="10"></progress>
-            </div>
-            <div>
-                <b>Nature:</b>
-                <progress id="flowers" value="10" max="100"></progress>
+            <div class="status-bars">
+                <p>
+                    <b>Water :</b>
+                    <progress id="water" value="3" max="10"></progress>
+                </p>
+                <p>
+                    <b>Nature:</b>
+                    <progress id="flowers" value="10" max="100"></progress>
+                </p>
             </div>
         </div>
         <div class="fullscreen">
