Make template winning message

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="overlay">
-            <div class="status-bars">
+            <div class="box">
                 <p>
                     <b>Water :</b>
                     <progress id="water" value="3" max="10"></progress>
@@ -23,6 +23,15 @@
                 </p>
             </div>
         </div>
+
+        <div class="endgame_overlay">
+            <div class="box">
+                <div id="game_won_text">
+                    CONGRATURLATION
+                </div>
+            </div>
+        </div>
+
         <div class="fullscreen">
             <canvas>
                 Your browser does not support HTML5
