Add instructions to GUI

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                     <b>Nature:</b>
                     <progress id="flowers" value="10" max="100"></progress>
                 </p>
+                <p>Movement: W, A, S, D</p>
+                <p>Plant:    J</p>
+                <p>Refill:   K</p>
+                <p>Water:    L</p>
             </div>
         </div>
 
